testing golab link

--- a/examples/PandasExample.ipynb
+++ b/examples/PandasExample.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8f523d37-c9ce-46ff-998d-00ac2b893f62",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/examples/PandasExample.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ee8c86e-3001-4674-a348-246d8b8a1e1a",
    "metadata": {},
    "source": [
