--- a/examples/PandasExample.ipynb
+++ b/examples/PandasExample.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "7095220c-bc43-4b60-9115-d3030b94e25c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('../datasets/Phishing_Email.csv')"
+    "data = pd.read_csv('https://raw.githubusercontent.com/RiverGumSecurity/AILabs/main/datasets/Phishing_Email.csv')"
    ]
   },
   {
