updates on Pandas

--- a/examples/Module02_PandasExample.ipynb
+++ b/examples/Module02_PandasExample.ipynb
@@ -10,19 +10,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee8c86e-3001-4674-a348-246d8b8a1e1a",
+   "id": "37fd8c2f-0ee0-4dba-bce3-bf9a2531f6c5",
    "metadata": {},
    "source": [
     "## Pandas Quick Overview\n",
     "\n",
     "First we import the pandas module into Python as *pd* which is a convention\n",
     "many people use.\n",
-    "Then we create a dataframe using the Pandas **read_csv()** method."
+    "Then we create a dataframe using the Pandas **read_csv()** method.  The Pandas documentation is divided into various different methodologies\n",
+    "based on expected needs.  These various methodologies are all fully documented in the [**Online User Guide**](https://pandas.pydata.org/docs/user_guide/index.html#user-guide). \n",
+    "\n",
+    "### Phishing Email Dataset\n",
+    "\n",
+    "The dataset we are using in this example comes from [**Kaggle**](https://www.kaggle.com/datasets/subhajournal/phishingemails) and is a pre-labeled phishing email dataset that labels the email contents as either phishing or benign.  For convenience, we have already downloaded this dataset and provided it in its comma delimitered form directly in our class repository.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "7095220c-bc43-4b60-9115-d3030b94e25c",
    "metadata": {},
    "outputs": [],
@@ -37,12 +43,12 @@
    "id": "5b10edff-92f6-4fed-bc01-7d4d79907db6",
    "metadata": {},
    "source": [
-    "The **data.shape** attribute shows you the shape of the data frame.  In this case, 18650 rows x 3 columns.\n"
+    "The [**data.shape**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.shape.html#pandas.DataFrame.shape) attribute shows you the shape of the data frame.  In this case, 18650 rows x 3 columns.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "f5fbf7e0-c911-4548-886a-4cf53e200f88",
    "metadata": {},
    "outputs": [
@@ -63,12 +69,12 @@
    "id": "1df5b909-d2ab-44f8-81b8-d17dbd8a6308",
    "metadata": {},
    "source": [
-    "**data.info()** gives you basic information about the data frame.\n"
+    "The [**data.info()**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.info.html) method gives you basic information about the data frame.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "5bae6e57-e65b-44f4-8019-fe4a416fd564",
    "metadata": {},
    "outputs": [
@@ -99,13 +105,13 @@
    "id": "9387f79e-ad61-427b-a405-653845f44721",
    "metadata": {},
    "source": [
-    "**data.head()** shows you the first 5 rows of data to give you a sense of what it looks like.  In this\n",
+    "[**data.head()**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.head.html) shows you the first 5 rows of data to give you a sense of what it looks like.  In this\n",
     "case we have a labelled phishing email dataset whereby the *Email Type* column shows the values \"Safe Email\" versus \"Phishing Email\".\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "db9a4175-019f-4222-bb99-bb1fd3ef04ad",
    "metadata": {},
    "outputs": [
@@ -138,12 +144,12 @@
    "id": "20017c60-3922-44a7-81d5-a95b6951bd6e",
    "metadata": {},
    "source": [
-    "**data.describe()** will perform some basic statistics on the data frame yielding row counts, confidence intervals, max, min, and mean values. It's a good way to get an all around sense of what data we are working with."
+    "[**data.describe()**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.describe.html) will perform some basic statistics on the data frame yielding row counts, confidence intervals, max, min, and mean values. It's a good way to get an all around sense of what data we are working with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "83c5b6b7-eb0d-4daa-ae17-4b1051546c8f",
    "metadata": {},
    "outputs": [
@@ -172,14 +178,14 @@
    "id": "ff41f9ca-a5e2-4425-b0eb-6876287b2c91",
    "metadata": {},
    "source": [
-    "* **data.isnull()** finds any rows in the data frame that have null values.\n",
-    "* using **sum()** allows us to see a count of those rows with null values.\n",
-    "* **data.dropna()** cleans up the null values by dropping those rows.\n"
+    "* [**data.isnull()**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.isnull.html) finds any rows in the data frame that have null values.\n",
+    "* using [**sum()**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sum.html) allows us to see a count of those rows with null values.\n",
+    "* [**data.dropna()**](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html) cleans up the null values by dropping those rows.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "34d33cab-68b3-4883-9221-26111d3c3109",
    "metadata": {},
    "outputs": [
