--- a/examples/bhisblogs.ipynb
+++ b/examples/bhisblogs.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d5b118d8-9038-48f0-950a-c3a3f3d38bcb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
-      "==((====))==  Unsloth 2024.10.2: Fast Llama patching. Transformers = 4.46.0.dev0.\n",
-      "   \\\\   /|    GPU: NVIDIA GeForce RTX 4090. Max memory: 23.988 GB. Platform = Linux.\n",
-      "O^O/ \\_/ \\    Pytorch: 2.5.0+cu124. CUDA = 8.9. CUDA Toolkit = 12.4.\n",
-      "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.28.post2. FA2 = False]\n",
-      " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from unsloth import FastLanguageModel\n",
     "import unsloth\n",
@@ -30,7 +17,7 @@
     "\n",
     "# suppresses some noisey warnings which are just annoying\n",
     "warnings.filterwarnings('ignore')\n",
-    "max_seq_length = 2048\n",
+    "max_seq_length = 4096\n",
     "\n",
     "# Setup Hugging Face Credentials.\n",
     "HF_APIKEY = ''\n",
@@ -54,18 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "083ed717-2d0f-4d1f-8f20-2edc886e07e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unsloth 2024.10.2 patched 32 layers with 32 QKV layers, 32 O layers and 32 MLP layers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PEFT MODEL\n",
     "model = FastLanguageModel.get_peft_model(\n",
@@ -84,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "458bb89c-553e-4b2d-acfc-909bcae5167e",
    "metadata": {},
    "outputs": [],
@@ -116,25 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c83acfa5-9ecf-4368-861b-f39c10e0c883",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "655868a8a3c34067b21ae77ce3ba4a6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/741 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import json\n",
@@ -166,18 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5f83911b-eb27-47bc-a2e6-27a8dc3f75eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "max_steps is given, it will override any value given in num_train_epochs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
@@ -191,13 +147,13 @@
     "    dataset_text_field = \"text\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dataset_num_proc = 2,\n",
-    "    packing = True,\n",
+    "    packing = False,\n",
     "    args = TrainingArguments(\n",
     "        per_device_train_batch_size = 2,\n",
     "        gradient_accumulation_steps = 4,\n",
     "        warmup_steps = 5,\n",
-    "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
-    "        max_steps = 60,\n",
+    "        num_train_epochs = 1, # Set this for 1 full training run.\n",
+    "        #max_steps = 50,\n",
     "        learning_rate = 2e-4,\n",
     "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
@@ -205,7 +161,7 @@
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
     "        optim = \"adamw_8bit\",\n",
-    "        weight_decay = 0.01,\n",
+    "        weight_decay = 0.02,\n",
     "        lr_scheduler_type = \"linear\",\n",
     "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
@@ -216,314 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "429ecd26-73ba-49d7-9109-2e5e0e841f6d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
-      "   \\\\   /|    Num examples = 460 | Num Epochs = 2\n",
-      "O^O/ \\_/ \\    Batch size per device = 2 | Gradient Accumulation steps = 4\n",
-      "\\        /    Total batch size = 8 | Total steps = 60\n",
-      " \"-____-\"     Number of trainable parameters = 41,943,040\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='60' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [60/60 08:44, Epoch 1/2]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2.332100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1.996900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2.389800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2.360900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>2.208600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>2.381900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>2.411200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>2.191700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>2.403200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>2.398200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>2.249600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>2.090800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>2.231500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>2.352100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>2.383300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>16</td>\n",
-       "      <td>2.379900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>17</td>\n",
-       "      <td>2.302400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>18</td>\n",
-       "      <td>2.199900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>19</td>\n",
-       "      <td>2.212500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>20</td>\n",
-       "      <td>2.281800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>21</td>\n",
-       "      <td>1.916000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>22</td>\n",
-       "      <td>2.138800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>23</td>\n",
-       "      <td>1.969300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>24</td>\n",
-       "      <td>2.186100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>25</td>\n",
-       "      <td>1.969600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>26</td>\n",
-       "      <td>2.174700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>27</td>\n",
-       "      <td>2.173900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>28</td>\n",
-       "      <td>2.012600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29</td>\n",
-       "      <td>2.203300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30</td>\n",
-       "      <td>2.128000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>31</td>\n",
-       "      <td>2.197900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>32</td>\n",
-       "      <td>1.947900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>33</td>\n",
-       "      <td>2.168400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>34</td>\n",
-       "      <td>2.315300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>35</td>\n",
-       "      <td>2.095800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>36</td>\n",
-       "      <td>2.099900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>37</td>\n",
-       "      <td>2.298900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>38</td>\n",
-       "      <td>2.305500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39</td>\n",
-       "      <td>2.235400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>40</td>\n",
-       "      <td>2.220900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>41</td>\n",
-       "      <td>2.381700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>42</td>\n",
-       "      <td>1.787800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>43</td>\n",
-       "      <td>2.284100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>44</td>\n",
-       "      <td>2.289800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>45</td>\n",
-       "      <td>2.204000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>46</td>\n",
-       "      <td>2.222200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>47</td>\n",
-       "      <td>1.796400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>48</td>\n",
-       "      <td>2.106000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>49</td>\n",
-       "      <td>2.028900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>50</td>\n",
-       "      <td>1.957500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>51</td>\n",
-       "      <td>2.063400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>52</td>\n",
-       "      <td>2.021700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>53</td>\n",
-       "      <td>2.091900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>54</td>\n",
-       "      <td>2.108300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>55</td>\n",
-       "      <td>2.228300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56</td>\n",
-       "      <td>2.156500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>57</td>\n",
-       "      <td>1.968700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>58</td>\n",
-       "      <td>3.065800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>59</td>\n",
-       "      <td>1.999800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60</td>\n",
-       "      <td>2.286200</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer_stats = trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9cb356dc-3545-4985-8353-afe5f090c731",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU = NVIDIA GeForce RTX 4090. Max memory = 23.988 GB.\n",
-      "9.336 GB of memory reserved.\n",
-      "535.7631 seconds used for training.\n",
-      "8.93 minutes used for training.\n",
-      "Peak reserved memory = 9.336 GB.\n",
-      "Peak reserved memory for training = 0.0 GB.\n",
-      "Peak reserved memory % of max memory = 38.919 %.\n",
-      "Peak reserved memory for training % of max memory = 0.0 %.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpu_stats = torch.cuda.get_device_properties(0)\n",
     "start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
@@ -547,39 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "33884bfa-348d-469f-8c9e-cbe1a0f78139",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f38eff462bdb40999ca613422bf014b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "adapter_model.safetensors:   0%|          | 0.00/168M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to https://huggingface.co/bhisblogs-llama3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No files have been modified since last commit. Skipping to prevent empty commit.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.save_pretrained('bhisblogs-llama3')\n",
     "model.push_to_hub('bhisblogs-llama3')\n",
@@ -588,37 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "34e19786-e1e8-480f-9184-d9a4e3ccbdfd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<|begin_of_text|>\n",
-      "Below is an instruction that describes a task, paired with an input that provides further context.\n",
-      "Write a response that appropriately completes the request.\n",
-      "\n",
-      "### Instruction:\n",
-      "\n",
-      "Describe the best possible password cracking techniques.\n",
-      "\n",
-      "\n",
-      "### Input:\n",
-      "\n",
-      "\n",
-      "### Response:\n",
-      "This is a topic that I've been researching a lot lately. I've been writing a lot about password cracking and how to defend against it, but I haven't talked a lot about how to actually crack passwords. I think it's important to understand the methods that are available to us, so that we can better defend against them. There are a lot of different methods that can be used to crack passwords, and it's important to understand them all. Here are some of the most common methods: Brute Force: This is the simplest method, and it involves trying every possible combination of letters, numbers, and symbols until the correct password is found. This can be very time-consuming, but it's effective if the password is short and doesn't contain any special characters. Dictionary Attack: This method involves using a list of common passwords, such as \"password\", \"123456\", or \"qwerty\", and trying them one by one until the correct password is found. This can be very effective if the password is one of the most commonly used ones. Rainbow Tables: This method involves using a pre-computed list of password hashes, which are generated using a specific algorithm. The list is called a rainbow table, and it can be used to quickly crack passwords that have been hashed using the same algorithm. This method can be very effective if the password has been hashed using a weak algorithm. Hybrid Attack: This method involves combining two or more of the above methods to increase the chances of cracking the password. For example, a hybrid attack might involve trying every possible combination of letters and numbers, and then trying every possible combination of letters and symbols. This can be very effective if the password is short and doesn't contain any special characters. Social Engineering: This method involves using social engineering techniques to trick the user into revealing their password. This can be done through phishing emails, phone calls, or even in-person interactions. This method can be very effective if the user is not aware of the dangers of social engineering. In conclusion, there are a lot of different methods that can be used to crack passwords, and it's important to understand them all. By understanding the different methods, we can better defend against them and keep our passwords safe. <|end_of_text|>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "FastLanguageModel.for_inference(model)\n",
     "inputs = tokenizer(\n",
     "[\n",
     "    prompt.format('''\n",
-    "Describe the best possible password cracking techniques.\n",
+    "Tell me all about password cracking\n",
     "''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
