--- a/examples/bhisblogs.ipynb
+++ b/examples/bhisblogs.ipynb
@@ -152,8 +152,8 @@
     "        per_device_train_batch_size = 2,\n",
     "        gradient_accumulation_steps = 4,\n",
     "        warmup_steps = 5,\n",
-    "        num_train_epochs = 1, # Set this for 1 full training run.\n",
-    "        #max_steps = 50,\n",
+    "        #num_train_epochs = 1, # Set this for 1 full training run.\n",
+    "        max_steps = 50,\n",
     "        learning_rate = 2e-4,\n",
     "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
@@ -230,7 +230,7 @@
     "inputs = tokenizer(\n",
     "[\n",
     "    prompt.format('''\n",
-    "Tell me all about password cracking\n",
+    "Tell me all about password hashes\n",
     "''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
