--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8f9c9c0a-2494-46ae-b605-8a7cd73916ce",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/bhisblogs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d5b118d8-9038-48f0-950a-c3a3f3d38bcb",
