--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -5,7 +5,7 @@
    "id": "8f9c9c0a-2494-46ae-b605-8a7cd73916ce",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/bhisblogs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/bhisblogs.ipynb\" target=\"new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -15,13 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from unsloth import FastLanguageModel\n",
-    "import unsloth\n",
     "import torch\n",
     "import warnings\n",
     "import os\n",
     "import sys\n",
     "import pathlib\n",
+    "try:\n",
+    "    import unsloth\n",
+    "except:\n",
+    "    if 'google.colab' in sys.modules:\n",
+    "        !pip install unsloth\n",
     "\n",
     "# suppresses some noisey warnings which are just annoying\n",
     "warnings.filterwarnings('ignore')\n",
@@ -40,7 +43,7 @@
     "    sys.exit(0)\n",
     "os.environ['HF_TOKEN'] = HF_APIKEY\n",
     "\n",
-    "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
     "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
@@ -55,7 +58,7 @@
    "outputs": [],
    "source": [
     "# PEFT MODEL\n",
-    "model = FastLanguageModel.get_peft_model(\n",
+    "model = unsloth.FastLanguageModel.get_peft_model(\n",
     "    model,\n",
     "    r = 16, # Suggested choice of 8, 16, 32, 64, or 128\n",
     "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
