changed to fetch data from github directly

--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -114,11 +114,12 @@
     "import re\n",
     "import json\n",
     "import datasets\n",
+    "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "# process blog data\n",
-    "with open('../datasets/bhis-blogs.json', 'rt') as fh:\n",
-    "    data = json.load(fh)\n",
+    "# get dataset\n",
+    "r = requests.get('https://raw.githubusercontent.com/RiverGumSecurity/Datasets/refs/heads/main/BHIS/bhis-blogs.json')\n",
+    "data = json.loads(r.text)\n",
     "\n",
     "# re-format dataset\n",
     "newds = []\n",
