--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -10,19 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "8469c472-b8bf-429d-a785-8254a28a8b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install requisite software if need be\n",
+    "try:\n",
+    "    import unsloth\n",
+    "except:\n",
+    "    !pip install unsloth\n",
+    "    !pip install --no-warn-conflicts git+https://github.com/huggingface/transformers.git git+https://github.com/huggingface/trl.git\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ac1b861-4534-469b-ada8-62d5c8505031",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*] Getting HF_TOKEN from local disk or Google Colab key store\n",
-      "[*] Setting HF_TOKEN environment variable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get Hugging Face Token\n",
     "import sys\n",
@@ -53,11 +60,6 @@
    "source": [
     "import torch\n",
     "import warnings\n",
-    "try:\n",
-    "    import unsloth\n",
-    "except:\n",
-    "    if 'google.colab' in sys.modules:\n",
-    "        !pip install unsloth\n",
     "\n",
     "# suppresses some noisey warnings which are just annoying\n",
     "warnings.filterwarnings('ignore')\n",
@@ -252,8 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('bhisblogs-llama3')\n",
-    "tokenizer.push_to_hub('bhisblogs-llama3')"
+    "model.push_to_hub('bhisblogs-llama3-70B')\n",
+    "tokenizer.push_to_hub('bhisblogs-llama3-70B')"
    ]
   },
   {
