--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -71,8 +71,11 @@
     "    \"unsloth/Meta-Llama-3.1-70B-bnb-4bit\",\n",
     "    \"unsloth/Meta-Llama-3.1-405B-bnb-4bit\"\n",
     "]\n",
+    "\n",
+    "# NOTE: Larger models require a LOT of GPU RAM.\n",
+    "# 8 billion params is ok in a 24GB GPU scenario\n",
     "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
-    "    model_name = fourbit_model[2],\n",
+    "    model_name = fourbit_model[0],\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
