--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -182,7 +182,6 @@
     "from transformers import TrainingArguments\n",
     "from unsloth import is_bfloat16_supported\n",
     "\n",
-    "newmodel = model\n",
     "trainer = SFTTrainer(\n",
     "    model = model,\n",
     "    tokenizer = tokenizer,\n",
@@ -257,8 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('bhisblogs-llama3-70B')\n",
-    "tokenizer.push_to_hub('bhisblogs-llama3-70B')"
+    "model.push_to_hub('bhisblogs-llama3')\n",
+    "tokenizer.push_to_hub('bhisblogs-llama3')"
    ]
   },
   {
