--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -267,14 +267,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from warnings import warn\n",
+    "from IPython import get_ipython\n",
+    "from IPython.display import HTML, display\n",
     "from transformers import TextStreamer\n",
     "\n",
+    "def enable_word_wrap(*args, **kwargs):\n",
+    "    display(HTML('''\n",
+    "    <style>\n",
+    "        pre {\n",
+    "            white-space: pre-wrap;\n",
+    "        }\n",
+    "    </style>\n",
+    "    '''))\n",
+    "\n",
+    "def register_ipython_callback_once(event_name, cb):\n",
+    "    ev = get_ipython().events\n",
+    "    cb_unregs = [cb_old for cb_old in ev.callbacks[event_name] if cb_old.__name__ == cb.__name__]\n",
+    "    if len(cb_unregs) == 1 and cb.__code__ == cb_unregs[0].__code__:\n",
+    "        return\n",
+    "    for cb_old in cb_unregs:\n",
+    "        warn(f'Removing unexpected callback {cb_old}.')\n",
+    "        ev.unregister(event_name, cb_old)\n",
+    "    ev.register(event_name, cb)\n",
+    "\n",
+    "register_ipython_callback_once('pre_run_cell', enable_word_wrap)\n",
     "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('''Tell me all about password hashes''', \"\", \"\")\n",
+    "inputs = tokenizer([prompt.format('Write about password cracking techniques', '', '')\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
-    "text_streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 8192)"
+    "streamer = TextStreamer(tokenizer)\n",
+    "_ = model.generate(**inputs, streamer=streamer, max_new_tokens=8192)"
    ]
   },
   {
