--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -11,71 +11,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8469c472-b8bf-429d-a785-8254a28a8b00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# install requisite software if need be\n",
-    "try:\n",
-    "    import unsloth\n",
-    "except:\n",
-    "    !pip install unsloth\n",
-    "    !pip install --no-warn-conflicts git+https://github.com/huggingface/transformers.git git+https://github.com/huggingface/trl.git\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ac1b861-4534-469b-ada8-62d5c8505031",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get Hugging Face Token\n",
-    "import sys\n",
-    "import os\n",
-    "import pathlib\n",
-    "\n",
-    "print('[*] Getting HF_TOKEN from local disk or Google Colab key store')\n",
-    "HF_TOKEN = ''\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    from google.colab import userdata\n",
-    "    HF_TOKEN = userdata.get('HF_TOKEN')\n",
-    "else:\n",
-    "    with open(pathlib.Path.home() / '.hfkey') as hf:\n",
-    "        HF_TOKEN = hf.read().strip()\n",
-    "if not HF_TOKEN:\n",
-    "    print('[-] ERROR: Cannot continue without Hugging Face API Key')\n",
-    "    sys.exit(0)\n",
-    "print('[*] Setting HF_TOKEN environment variable')\n",
-    "os.environ['HF_TOKEN'] = HF_TOKEN\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d5b118d8-9038-48f0-950a-c3a3f3d38bcb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import warnings\n",
+    "import os\n",
+    "import sys\n",
+    "import pathlib\n",
+    "try:\n",
+    "    import unsloth\n",
+    "except:\n",
+    "    if 'google.colab' in sys.modules:\n",
+    "        !pip install unsloth\n",
     "\n",
     "# suppresses some noisey warnings which are just annoying\n",
     "warnings.filterwarnings('ignore')\n",
     "max_seq_length = 4096\n",
     "\n",
-    "fourbit_model = [\n",
-    "    \"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",\n",
-    "    \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\",\n",
-    "    \"unsloth/Meta-Llama-3.1-70B-bnb-4bit\",\n",
-    "    \"unsloth/Meta-Llama-3.1-405B-bnb-4bit\"\n",
-    "]\n",
+    "# Setup Hugging Face Credentials.\n",
+    "HF_APIKEY = ''\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import userdata\n",
+    "    HF_APIKEY = userdata.get('HF_APIKEY')\n",
+    "else:\n",
+    "    with open(pathlib.Path.home() / '.hfkey') as hf:\n",
+    "        HF_APIKEY = hf.read().strip()\n",
+    "if not HF_APIKEY:\n",
+    "    print('[-] ERROR: Cannot continue without Hugging Face API Key')\n",
+    "    sys.exit(0)\n",
+    "os.environ['HF_TOKEN'] = HF_APIKEY\n",
     "\n",
-    "# NOTE: Larger models require a LOT of GPU RAM.\n",
-    "# 8 billion params is ok in a 24GB GPU scenario\n",
     "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
-    "    model_name = fourbit_model[0],\n",
+    "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
@@ -149,25 +118,9 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "# get dataset\n",
-    "r = requests.get('https://raw.githubusercontent.com/RiverGumSecurity/Datasets/refs/heads/main/BHIS/bhis-blogs.json')\n",
+    "r = requests.get('https://raw.githubusercontent.com/RiverGumSecurity/Datasets/refs/heads/main/BHIS/bhis-blogs-cleaned.json')\n",
     "data = json.loads(r.text)\n",
-    "\n",
-    "# re-format dataset\n",
-    "newds = []\n",
-    "for i, item in enumerate(data):\n",
-    "    s = BeautifulSoup(item['content'], \"html.parser\")\n",
-    "    content = s.get_text()\n",
-    "    content = re.sub(r'\\s+', ' ', content)\n",
-    "    if len(content) < 128:\n",
-    "        continue\n",
-    "    elif len(content) > max_seq_length:\n",
-    "        for line in content.split('\\n'):\n",
-    "            if line:\n",
-    "                newds.append({'input': '', 'instruction': '', 'output': f\"{item['title']} {' '.join(item['taxonomies'])} {line}\"})\n",
-    "    else:\n",
-    "        newds.append({'input': '', 'instruction': '', 'output': f\"{item['title']} {' '.join(item['taxonomies'])} {content}\"})\n",
-    "\n",
-    "ds = datasets.Dataset.from_list(newds)\n",
+    "ds = datasets.Dataset.from_list(data)\n",
     "ds = ds.map(format_prompts, batched=True)"
    ]
   },
@@ -178,24 +131,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# trl version 0.12.0 is the latest\n",
+    "# - tokenizer arg becomes \"processing_class\"\n",
+    "# - dataset_text field is no longer required\n",
+    "#\n",
+    "\n",
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
     "from unsloth import is_bfloat16_supported\n",
     "\n",
+    "newmodel = model\n",
     "trainer = SFTTrainer(\n",
     "    model = model,\n",
-    "    tokenizer = tokenizer,\n",
+    "    processing_class = tokenizer,\n",
     "    train_dataset = ds,\n",
-    "    dataset_text_field = \"text\",\n",
-    "    max_seq_length = max_seq_length,\n",
-    "    dataset_num_proc = 2,\n",
-    "    packing = False,\n",
+    "    #max_seq_length = max_seq_length,\n",
+    "    #dataset_num_proc = 2,\n",
+    "    #packing = False,\n",
     "    args = TrainingArguments(\n",
     "        per_device_train_batch_size = 2,\n",
     "        gradient_accumulation_steps = 4,\n",
     "        warmup_steps = 5,\n",
-    "        #num_train_epochs = 1, # Set this for 1 full training run.\n",
-    "        max_steps = 50,\n",
+    "        # Set this for 1 full training run.\n",
+    "        num_train_epochs = 1,\n",
+    "        #max_steps = 50,\n",
     "        learning_rate = 2e-4,\n",
     "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
@@ -267,37 +226,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from warnings import warn\n",
-    "from IPython import get_ipython\n",
-    "from IPython.display import HTML, display\n",
     "from transformers import TextStreamer\n",
     "\n",
-    "def enable_word_wrap(*args, **kwargs):\n",
-    "    display(HTML('''\n",
-    "    <style>\n",
-    "        pre {\n",
-    "            white-space: pre-wrap;\n",
-    "        }\n",
-    "    </style>\n",
-    "    '''))\n",
-    "\n",
-    "def register_ipython_callback_once(event_name, cb):\n",
-    "    ev = get_ipython().events\n",
-    "    cb_unregs = [cb_old for cb_old in ev.callbacks[event_name] if cb_old.__name__ == cb.__name__]\n",
-    "    if len(cb_unregs) == 1 and cb.__code__ == cb_unregs[0].__code__:\n",
-    "        return\n",
-    "    for cb_old in cb_unregs:\n",
-    "        warn(f'Removing unexpected callback {cb_old}.')\n",
-    "        ev.unregister(event_name, cb_old)\n",
-    "    ev.register(event_name, cb)\n",
-    "\n",
-    "register_ipython_callback_once('pre_run_cell', enable_word_wrap)\n",
     "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('Write about password cracking techniques', '', '')\n",
+    "inputs = tokenizer([prompt.format('''Describe AES in detail''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
-    "streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer=streamer, max_new_tokens=8192)"
+    "text_streamer = TextStreamer(tokenizer)\n",
+    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 8192)"
    ]
   },
   {
@@ -325,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
