--- a/notebooks/alpaca.ipynb
+++ b/notebooks/alpaca.ipynb
@@ -126,8 +126,8 @@
     "        gradient_accumulation_steps = 4,\n",
     "        warmup_steps = 5,\n",
     "        # Set this for 1 full training run.\n",
-    "        num_train_epochs = 1,\n",
-    "        #max_steps = 50,\n",
+    "        # num_train_epochs = 1,\n",
+    "        max_steps = 80,\n",
     "        learning_rate = 2e-4,\n",
     "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
