saving fixed version of alpaca

--- a/notebooks/alpaca.ipynb
+++ b/notebooks/alpaca.ipynb
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# alpaca_prompt = Copied from above\n",
-    "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
+    "unsloth.FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
     "inputs = tokenizer(\n",
     "[\n",
     "    prompt.format(\n",
