updated colab links

--- a/notebooks/alpaca.ipynb
+++ b/notebooks/alpaca.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f63434cd-dbe6-4964-a6c0-e0391c329a0d",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/alpaca.ipynb\" target=\"new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "024e2f61-8970-47f4-a737-8c857c69c5ad",
