--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -5,7 +5,7 @@
    "id": "8f9c9c0a-2494-46ae-b605-8a7cd73916ce",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/dev-joff/notebooks/bhisblogs.ipynb\" target=\"new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/bhisblogs.ipynb\" target=\"new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -229,11 +229,11 @@
     "from transformers import TextStreamer\n",
     "\n",
     "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('''Describe AES in detail''', \"\", \"\")\n",
+    "inputs = tokenizer([prompt.format('''Exactly how does TLS for web content encryption work?''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
     "text_streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 8192)"
+    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 4096)"
    ]
   },
   {
