updated with word wrapping fix code

--- a/notebooks/alpaca.ipynb
+++ b/notebooks/alpaca.ipynb
@@ -26,7 +26,7 @@
     "    if 'google.colab' in sys.modules:\n",
     "        !pip install unsloth\n",
     "\n",
-    "# suppresses some noisey warnings which are just annoying\n",
+    "# suppresses some noisy warnings which are just annoying\n",
     "warnings.filterwarnings('ignore')\n",
     "max_seq_length = 4096\n",
     "\n",
@@ -48,6 +48,42 @@
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa00886a-fcda-43b2-a535-88a21a5d3e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This code fixes a word wrapping issue\n",
+    "# in Google Co-Lab on Text Streamer output.\n",
+    "from warnings import warn\n",
+    "from IPython import get_ipython\n",
+    "from IPython.display import HTML, display\n",
+    "from transformers import TextStreamer\n",
+    "\n",
+    "def enable_word_wrap(*args, **kwargs):\n",
+    "    display(HTML('''\n",
+    "    <style>\n",
+    "        pre {\n",
+    "            white-space: pre-wrap;\n",
+    "        }\n",
+    "    </style>\n",
+    "    '''))\n",
+    "\n",
+    "def register_ipython_callback_once(event_name, cb):\n",
+    "    ev = get_ipython().events\n",
+    "    cb_unregs = [cb_old for cb_old in ev.callbacks[event_name] if cb_old.__name__ == cb.__name__]\n",
+    "    if len(cb_unregs) == 1 and cb.__code__ == cb_unregs[0].__code__:\n",
+    "        return\n",
+    "    for cb_old in cb_unregs:\n",
+    "        warn(f'Removing unexpected callback {cb_old}.')\n",
+    "        ev.unregister(event_name, cb_old)\n",
+    "    ev.register(event_name, cb)\n",
+    "\n",
+    "register_ipython_callback_once('pre_run_cell', enable_word_wrap)"
    ]
   },
   {
