--- a/notebooks/bhisblogs.ipynb
+++ b/notebooks/bhisblogs.ipynb
@@ -53,6 +53,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6721ed23-3cc0-4264-a2df-ed7c3777a96e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This code fixes a word wrapping issue\n",
+    "# in Google Co-Lab on Text Streamer output.\n",
+    "from warnings import warn\n",
+    "from IPython import get_ipython\n",
+    "from IPython.display import HTML, display\n",
+    "from transformers import TextStreamer\n",
+    "\n",
+    "def enable_word_wrap(*args, **kwargs):\n",
+    "    display(HTML('''\n",
+    "    <style>\n",
+    "        pre {\n",
+    "            white-space: pre-wrap;\n",
+    "        }\n",
+    "    </style>\n",
+    "    '''))\n",
+    "\n",
+    "def register_ipython_callback_once(event_name, cb):\n",
+    "    ev = get_ipython().events\n",
+    "    cb_unregs = [cb_old for cb_old in ev.callbacks[event_name] if cb_old.__name__ == cb.__name__]\n",
+    "    if len(cb_unregs) == 1 and cb.__code__ == cb_unregs[0].__code__:\n",
+    "        return\n",
+    "    for cb_old in cb_unregs:\n",
+    "        warn(f'Removing unexpected callback {cb_old}.')\n",
+    "        ev.unregister(event_name, cb_old)\n",
+    "    ev.register(event_name, cb)\n",
+    "\n",
+    "register_ipython_callback_once('pre_run_cell', enable_word_wrap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "083ed717-2d0f-4d1f-8f20-2edc886e07e0",
    "metadata": {},
    "outputs": [],
