more updates to neural networks notebook

--- a/labs/Module02_Neural_Networks.ipynb
+++ b/labs/Module02_Neural_Networks.ipynb
@@ -817,19 +817,7 @@
    "id": "906c5a6e-3f69-4236-9e93-2516832b1fc0",
    "metadata": {},
    "source": [
-    "Now we set up a two dimensional array of our vectors and the corresponding labels. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b3cbc61c-5ef3-46cd-b9d0-fc265e7d55d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Is this chunk of code necessary?\n",
-    "#X = np.array(vector)\n",
-    "#y = np.array(df['Email Type'])"
+    "Now we split our dataset into training and testing sets using the `train_test_split function` from scikit-learn.  We will train our neural network on 80 percent of the data, then evaluate the accuracy on the remaining 20 percent. "
    ]
   },
   {
