updated URL for Datasets in Neural Nets notebook

--- a/notebooks/ModuleXX_Neural_Networks.ipynb
+++ b/notebooks/ModuleXX_Neural_Networks.ipynb
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "# Read in the data into a Pandas dataframe\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/RiverGumSecurity/AILabs/main/datasets/Phishing_Email.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/RiverGumSecurity/Datasets/main/Kaggle/Phishing_Email.csv.gz')\n",
     "#df = pd.read_csv('../datasets/Phishing_Email.csv')\n",
     "df.head(10)"
    ]
