--- a/notebooks/ModuleXX_bhisblogs-alpaca.ipynb
+++ b/notebooks/ModuleXX_bhisblogs-alpaca.ipynb
@@ -245,7 +245,7 @@
     "from transformers import TextStreamer\n",
     "\n",
     "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('''What is a Nessus vulnerability risk level?''', \"\", \"\")\n",
+    "inputs = tokenizer([prompt.format('''Write a comprehensive password policy''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
     "text_streamer = TextStreamer(tokenizer)\n",
