updated all Dataset references to Datasets repo

--- a/notebooks/ModuleXX_Supervised_Learning_Lab.ipynb
+++ b/notebooks/ModuleXX_Supervised_Learning_Lab.ipynb
@@ -73,7 +73,7 @@
     "# required citation at the end of the notebook\n",
     "\n",
     "# Read in dataset \n",
-    "df = pd.read_csv(\"../datasets/CEAS_08.csv\")\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/RiverGumSecurity/Datasets/refs/heads/main/Zenodo/CEAS_08.csv.gz\")\n",
     "df"
    ]
   },
