slight doc change on linear regression

--- a/notebooks/ModuleXX_Linear_Regression.ipynb
+++ b/notebooks/ModuleXX_Linear_Regression.ipynb
@@ -1,13 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49bf2d6a-232d-44e4-b91d-6d4dfb0bec90",
+   "cell_type": "markdown",
+   "id": "f594a5f1-da3c-4acc-88da-81e55131f1ee",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Linear Regression\n"
+    "# Linear Regression\n",
+    "\n",
+    "Learning objectives:\n",
+    "* Selecting a suitable data source\n",
+    "* Defining linear regression.\n",
+    "* Mean squared error as a central concept.\n",
+    "* Outlining why we use linear regression.\n",
+    "* Demonstration and observing machine learning with linear regression.\n",
+    "* Q/A?   Do we have MetaCTF questions we could pose?  "
    ]
   },
   {
