--- a/notebooks/ModuleXX_alpaca.ipynb
+++ b/notebooks/ModuleXX_alpaca.ipynb
@@ -9,6 +9,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb0ef625-6ea2-479c-bc50-008d69e5ed6c",
+   "metadata": {},
+   "source": [
+    "## Alpaca Dataset Supervised Fine Tuning of Llama3\n",
+    "\n",
+    "* Google colab does not have unsloth installed by default\n",
+    "* Hugging Face API Key/Token will need to exist in keystore for colab or local disk otherwise\n",
+    "* We set a max_seq_length parameter to set the token vector size.  Padding will occur if less than this size\n",
+    "* When text streaming in Google Colab, wrapping does not work so we are forced to inject some CSS using an iPython callback\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "024e2f61-8970-47f4-a737-8c857c69c5ad",
